bdr.BDR.scala.error
Compilation error:
BDR:33: error: not found: value True
    fini=True
         ^